# DataMarket

./: Cargo.toml  README.md  ValueOfData.ipynb  requirements.txt
.ipynb_checkpoints/: ValueOfData-checkpoint.ipynb
docker/: Dockerfile.dev  Dockerfile.dev.base  Dockerfile.release  Dockerfile.test  docker-compose-test.yml  docker-compose.yml
jupyter/: README.txt  datamarket.ipynb
jupyter/.ipynb_checkpoints/: datamarket-checkpoint.ipynb
play/lists/: Cargo.toml
play/lists/src/: fifth.rs  first.rs  second.final.rs  second.rs  third.rs
src/: main.rs
