[package]
name = "data_mart_demo"
version = "0.1.0"
authors = ["anish.agarwal@gmail.com", "michael.david.lauria@gmail.com"]

[dependencies.rdkafka]
version = "0.14.0"
features = ["ssl", "sasl"]

[dependencies]
# dev dependencies of rdkafka below
chrono = "^0.4.0"
clap = "^2.18.0"
env_logger = "^0.3.0"
futures-cpupool = "^0.1.2"
rand = "^0.3.15"
tokio-core = "^0.1.4"
# dev dependencies of rdkafka above

